# pose_optmization_tutorial

./: .gitignore  README.md  rviz_show_pose.rviz
beginner_tutorials/: CMakeLists.txt
beginner_tutorials/lie_group/generate_data/: generate_data.cpp  generate_data.h  main.cpp
beginner_tutorials/lie_group/optimization/: obs_factor.h
beginner_tutorials/lie_group/visualization/: camera_pose_vis.cpp  camera_pose_vis.h  land_mark_vis.cpp  land_mark_vis.h  main.cpp
beginner_tutorials/scripts/: talker.py
beginner_tutorials/src/: quaternion_test_chapters.cpp  quaternion_test_chapters.h
ceres_sophus_tutorial/: CMakeLists.txt  main.cpp
